--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GH_TOKEN }}
+          registry: ghcr.io
 
       - name: Get current date
         id: date
