refactor: optimize image size and improve security posture
- Replace java-21-openjdk with headless variant
- Remove Python/pip, use diffutils/sdiff instead of icdiff
- Remove EPEL repo (enterprise compliance)
- Remove bat installation
- Optimize git clones (--depth=1, remove .git dirs)
- Add weekly scheduled image rebuilds
- Add Dependabot auto-merge workflow
- Restructure assets directory

Reduces image size.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,9 @@ on:
       - "main"
     paths:
       - "Dockerfile"
-      - ".assets/**"
+      - "assets/**"
+  schedule:
+    - cron: '0 2 * * 0'
   workflow_dispatch:
 
 permissions:
